supply refactors (#4604)
* Refactors from Rigel
